--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@slack/web-api": "^6.13.0",
+    "apify-client": "^2.12.6",
     "crypto": "^1.0.1",
     "next": "15.3.5",
     "react": "^19.0.0",
